@@ -30,111 +30,94 @@ import org.apache.hcatalog.mapred.HCatMapredInputFormat;
 import org.apache.hcatalog.mapred.HCatMapredOutputFormat;
 import org.apache.hcatalog.mapreduce.HCatInputStorageDriver;
 import org.apache.hcatalog.mapreduce.HCatOutputStorageDriver;
+import org.apache.hcatalog.mapreduce.HCatStorageHandler;
 import org.apache.hcatalog.mapreduce.OutputJobInfo;
-import org.apache.hcatalog.storagehandler.HCatStorageHandler.DummyInputFormat;
-import org.apache.hcatalog.storagehandler.HCatStorageHandler.DummyOutputFormat;
 
+/**
+ * This  is a broken class and should be removed as
+ * part of HCATALOG-237
+ */
+@Deprecated
 public class HCatStorageHandlerImpl extends HCatStorageHandler {
 
   Class isd;
   Class osd;
 
   Log LOG = LogFactory.getLog(HCatStorageHandlerImpl.class);
-  
-  @Override
+
   public Class<? extends HCatInputStorageDriver> getInputStorageDriver() {
     return isd;
   }
 
-  @Override
   public Class<? extends HCatOutputStorageDriver> getOutputStorageDriver() {
     return osd;
   }
 
-  @Override
+    @Override
+    public void configureInputJobProperties(TableDesc tableDesc, Map<String, String> jobProperties) {
+    }
+
+    @Override
+    public void configureOutputJobProperties(TableDesc tableDesc, Map<String, String> jobProperties) {
+        //To change body of implemented methods use File | Settings | File Templates.
+    }
+
+    @Override
   public HiveAuthorizationProvider getAuthorizationProvider()
       throws HiveException {
     return new DummyHCatAuthProvider();
   }
 
-  @Override
   public void commitCreateTable(Table table) throws MetaException {
   }
 
   @Override
-  public void commitDropTable(Table table, boolean deleteData)
-      throws MetaException {
-    // do nothing special
-  }
-
-  @Override
-  public void preCreateTable(Table table) throws MetaException {
-    // do nothing special
-  }
-
-  @Override
-  public void preDropTable(Table table) throws MetaException {
-    // do nothing special
-  }
-
-  @Override
-  public void rollbackCreateTable(Table table) throws MetaException {
-    // do nothing special
-  }
-
-  @Override
-  public void rollbackDropTable(Table table) throws MetaException {
-    // do nothing special
-  }
-
-  @Override
   public HiveMetaHook getMetaHook() {
-    return this;
+    return null;
   }
 
-  @Override
-  public void configureTableJobProperties(TableDesc tableDesc,
-      Map<String, String> jobProperties) {
-    // Information about the table and the job to be performed
-    // We pass them on into the mepredif / mapredof
-
-    Properties tprops = tableDesc.getProperties();
-
-    if(LOG.isDebugEnabled()){
-      LOG.debug("HCatStorageHandlerImpl configureTableJobProperties:");
-      HCatUtil.logStackTrace(LOG);
-      HCatUtil.logMap(LOG, "jobProperties", jobProperties);
-      if (tprops!= null){
-        HCatUtil.logEntrySet(LOG, "tableprops", tprops.entrySet());
-      }
-      LOG.debug("tablename : "+tableDesc.getTableName());
-    }
-    
-    // copy existing table props first
-    for (Entry e : tprops.entrySet()){
-      jobProperties.put((String)e.getKey(), (String)e.getValue());
-    }
-    
-    // try to set input format related properties
-    try {
-      HCatMapredInputFormat.setTableDesc(tableDesc,jobProperties);
-    } catch (IOException ioe){
-      // ok, things are probably not going to work, but we
-      // can't throw out exceptions per interface. So, we log.
-      LOG.error("HCatInputFormat init fail " + ioe.getMessage());
-      LOG.error(ioe.getStackTrace());
-    }
-
-    // try to set output format related properties
-    try {
-      HCatMapredOutputFormat.setTableDesc(tableDesc,jobProperties);
-    } catch (IOException ioe){
-      // ok, things are probably not going to work, but we
-      // can't throw out exceptions per interface. So, we log.
-      LOG.error("HCatOutputFormat init fail " + ioe.getMessage());
-      LOG.error(ioe.getStackTrace());
-    }
-  }
+//  public void configureTableJobProperties(TableDesc tableDesc,
+//      Map<String, String> jobProperties) {
+//    // Information about the table and the job to be performed
+//    // We pass them on into the mepredif / mapredof
+//
+//    Properties tprops = tableDesc.getProperties();
+//
+//    if(LOG.isDebugEnabled()){
+//      LOG.debug("HCatStorageHandlerImpl configureTableJobProperties:");
+//      HCatUtil.logStackTrace(LOG);
+//      HCatUtil.logMap(LOG, "jobProperties", jobProperties);
+//      if (tprops!= null){
+//        HCatUtil.logEntrySet(LOG, "tableprops", tprops.entrySet());
+//      }
+//      LOG.debug("tablename : "+tableDesc.getTableName());
+//    }
+//
+//    // copy existing table props first
+//    for (Entry e : tprops.entrySet()){
+//      jobProperties.put((String)e.getKey(), (String)e.getValue());
+//    }
+//
+//    // try to set input format related properties
+//    try {
+//      HCatMapredInputFormat.setTableDesc(tableDesc,jobProperties);
+//    } catch (IOException ioe){
+//      // ok, things are probably not going to work, but we
+//      // can't throw out exceptions per interface. So, we log.
+//      LOG.error("HCatInputFormat init fail " + ioe.getMessage());
+//      LOG.error(ioe.getStackTrace());
+//    }
+//
+//    // try to set output format related properties
+//    try {
+//      HCatMapredOutputFormat.setTableDesc(tableDesc,jobProperties);
+//    } catch (IOException ioe){
+//      // ok, things are probably not going to work, but we
+//      // can't throw out exceptions per interface. So, we log.
+//      LOG.error("HCatOutputFormat init fail " + ioe.getMessage());
+//      LOG.error(ioe.getStackTrace());
+//    }
+//  }
 
   @Override
   public Configuration getConf() {
